--- a/influencer-journey.html
+++ b/influencer-journey.html
@@ -46,7 +46,7 @@
                 <p>
                     It easier to get things done by efforts than getting things done and influence people. It is easy to
                     say things rather than say things to influence. Influencing people in a right direction is not for
-                    everyone but for few. Let’s be a responsible influencers.
+                    everyone but for few. Lets be a responsible influencers.
                 </p>
                 <button>Preebook now <span><i class="fas fa-arrow-right"></i></span></button>
 
@@ -267,14 +267,39 @@
                 </div>
 
             </div>
+            <a class="more" href="">See more <span><i class="fas fa-arrow-right"></i></span></a>
 
 
 
         </section>
+        <section class="featured-products">
+            <div class="products">
+                <div class="product">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="product">
+                    <h2>Featured products at one place
+                    </h2>
+                    <p>Looking for gears to start blogging? We gather all the gear you might need in one place. You can
+                        still buy them from different places but why waste time when you can find everything in one
+                        place.</p>
+                    <button>Join Now <span><i class="fas fa-arrow-right"></i></span></button>
+                </div>
 
-
-
+            </div>
+        </section>
     </main>
+    <footer>
+        <h2>Influencer products</h2>
+        <p>Copyright <span><i class="far fa-copyright"></i></span> 2020 influencer products</p>
+        <h3>All rights reserved</h3>
+        <div>
+            <span><i class="fab fa-instagram"></i></span>
+            <span><i class="fab fa-twitter"></i></span>
+            <span><i class="fab fa-google"></i></span>
+            <span><i class="fab fa-youtube"></i></span>
+        </div>
+    </footer>
 
 </body>
 
